@@ -2,8 +2,7 @@ package com.savvasad.apps.service;
 
 import com.savvasad.apps.dto.BrandDTO;
 import com.savvasad.apps.entity.BrandEntity;
-import com.savvasad.apps.exception.DuplicateResourceException;
-import com.savvasad.apps.exception.ResourceNotFoundException;
+import com.savvasad.apps.helper.EntityHelper;
 import com.savvasad.apps.mapper.BrandMapper;
 import com.savvasad.apps.repository.BrandRepository;
 import org.springframework.stereotype.Service;
@@ -11,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -39,13 +37,16 @@ public class BrandServiceImpl implements BrandService {
     public List<BrandDTO> findAll() {
         return brandRepository.findAll().stream()
                 .map(BrandMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public BrandDTO update(Long id, BrandDTO brandDTO) {
-        BrandEntity entity = findByIdOrThrow(id);
-        validateNameNotExists(brandDTO.name());
+        BrandEntity entity = findBrandByIdOrThrow(id);
+
+        if (!entity.getName().equals(brandDTO.name())) {
+            validateNameNotExists(brandDTO.name());
+        }
 
         entity.setName(brandDTO.name());
         entity.setDescription(brandDTO.description());
@@ -54,31 +55,20 @@ public class BrandServiceImpl implements BrandService {
 
     @Override
     public void deleteById(Long id) {
-        validateExists(id);
+        if (!brandRepository.existsById(id)) {
+            EntityHelper.throwResourceNotFoundException("Brand", id);
+        }
         brandRepository.deleteById(id);
     }
 
-    // Private validation methods - business logic belongs in the service layer
-    private BrandEntity findByIdOrThrow(Long id) {
+    private BrandEntity findBrandByIdOrThrow(Long id) {
         return brandRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        String.format("Brand not found: %s", id)
-                ));
-    }
-
-    private void validateExists(Long id) {
-        if (!brandRepository.existsById(id)) {
-            throw new ResourceNotFoundException(
-                    String.format("Brand with id '%d' does not exist.", id)
-            );
-        }
+                .orElseThrow(() -> EntityHelper.throwResourceNotFoundException("Brand", id));
     }
 
     private void validateNameNotExists(String name) {
         if (brandRepository.existsByName(name)) {
-            throw new DuplicateResourceException(
-                    String.format("Brand with name '%s' already exists.", name)
-            );
+            EntityHelper.throwDuplicateResourceException("Brand", "name", name);
         }
     }
 }
